@@ -309,11 +309,10 @@ SHOWDAMAGE=NO
 # COMBAT-ADV         Include adverbs when the combat value is exceptional.
 # COMBAT-ADJ         Include an adjective relative to a mob of the same level.
 # COMBAT-NOUN        Include a level-based combat/attack noun.
-# DAMAGE-ABSOLUTE    Include a absolute damage prowess string.
-# DAMAGE-NUMBER      Include the numeric absolute base damage value.
 # *
 # Set the value to NONE to include none of the options above.
-# Set the value to BLANK to default to ARMOR-ABSOLUTE, COMBAT-ABSOLUTE
+# Set the value to BLANK to default to ARMOR-ABSOLUTE, ARMOR-NUMBER, 
+#    COMBAT-ABSOLUTE, COMBAT-NUMBER
 # Default is blank
 PROWESSOPTIONS=
 
