@@ -14,11 +14,11 @@
 #########################################################################################################
 
 
-# ARMOR_DESCS_CEILING is a ceiling for armor value (-player armor)+50, used to scale the
+# ARMOR_DESCS_CEILING is a ceiling for absolute armor value (-player armor)+50, used to scale the
 # ARMOR_DESCS chart.
 ARMOR_DESCS_CEILING=300
 
-# ARMOR_DESCS - the friendly name description of armor values.
+# ARMOR_DESCS - the friendly name description of absolute armor values.
 ARMOR_DESCS=\
         vulnerable,\
         slightly covered,\
@@ -71,11 +71,34 @@ ARMOR_DESCS=\
         almost invincible,\
         invincible!
 
-# PROWESS_DESCS_CEILING is a ceiling for combat prowess, used to scale the
+# ARMOR_ADJS - relative armor adjectives
+ARMOR_ADJS=\
+        vulnerable,\
+        susceptible,\
+        covered,\
+        protected,\
+        defended,\
+        guarded,\
+        armored,\
+        unhittable,\
+        impenetrable,\
+        invulnerable
+
+# EXTREME_ADVS - relative armor and combat prowess adverbs for extreme values
+EXTREME_ADVS=\
+        Very,\
+        Extremely,\
+        Incredibly,\
+        Astoundingly,\
+        Stupendously,\
+        Drastically,\
+        Amazingly
+
+# PROWESS_DESCS_CEILING is a ceiling for absolute combat prowess, used to scale the
 # PROWESS_DESCS chart.
 PROWESS_DESCS_CEILING=300
 
-# PROWESS_DESCS - the friendly name description of combat prowess values.
+# PROWESS_DESCS - the friendly name description of absolute combat prowess values.
 PROWESS_DESCS=\
             none,\
             novice,\
@@ -190,7 +213,57 @@ PROWESS_DESCS=\
             a lord of death IX,\
             a lord of death X,\
             death incarnate!
-            
+
+# COMBAT_ADJS - relative attack prowess adjectives
+COMBAT_ADJS=\
+        Powerless,\
+        Terrible,\
+        Inept,\
+        Weak,\
+        Clumsy,\
+        Marginal,\
+        Average,\
+        Able,\
+        Skilled,\
+        Masterful,\
+        Powerful,\
+        Dangerous,\
+        Deadly
+
+# COMBAT_NOUNS - relative attack prowess nouns
+COMBAT_NOUNS=\
+        Neophyte,\
+        Beginner,\
+        Novice,\
+        Initiate,\
+        Trainee,\
+        Rookie,\
+        Journeyman,\
+        Traveler,\
+        Voyager,\
+        Adventurer,\
+        Wanderer,\
+        Pioneer,\
+        Adept,\
+        Expert,\
+        Veteran,\
+        Combatant,\
+        Soldier,\
+        Mercenary,\
+        Commando,\
+        Ace,\
+        Virtuoso,\
+        Master,\
+        Dominator,\
+        Conqueror,\
+        Hero,\
+        Legend,\
+        Champion,\
+        Superhero,\
+        Exemplar,\
+        Paragon,\
+        Demigod
+
 # WEAPON_MISS_DESCS is a chart consisting of standard miss strings.  The number of
 # items in this table can not be changed, nor can their order -- only the text is
 # modifiable.  Roughly speaking, the order is MISSILE, THROWN, SLASH/BASH, OTHER, PIERCE, LASER
