@@ -1134,7 +1134,14 @@
 		<BR>
 		<FONT COLOR=WHITE>@INIValue?MASK=COMBATSYSTEM&INIHELP@
 		</TD></TR>
-		
+
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>PROWESSOPTIONS</FONT>
+		</TD><TD WIDTH=80% VALIGN=TOP>
+		<INPUT TYPE=TEXT NAME=PROWESSOPTIONS SIZE=40 VALUE="@INIValue?MASK=PROWESSOPTIONS&VALUE@">
+		<BR>
+		<FONT COLOR=WHITE>@INIValue?MASK=PROWESSOPTIONS&INIHELP@
+		</TD></TR>
+
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>SHOWDAMAGE</FONT>
 		</TD><TD WIDTH=80% VALIGN=TOP>
 		<INPUT TYPE=TEXT NAME=SHOWDAMAGE SIZE=20 VALUE="@INIValue?MASK=SHOWDAMAGE&VALUE@">
