@@ -43,6 +43,7 @@
   41. New standard Locales: LongRoad, LongerRoad, LongestRoad - cost more movement
   42. New Achievement triggers: playerborn, births, racebirth, playerbornparent
   43. Babies born as players no longer get bonuses per se -- only through acheivements. 
+  44. New INI entry: PROWESSOPTIONS, for controlling how combat/armor prowess is displayed.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
